--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,18 @@
-<LinearLayout
+<ScrollView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <GridLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_weight="0.51">
-
-        <FrameLayout
-            android:id="@+id/cameraPreview"
+    android:id="@+id/scrollView">
+        <GridLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
-    </GridLayout>
-
-    <GridLayout
-        android:layout_width="fill_parent"
-        android:layout_height="74dp"
-        android:layout_gravity="right">
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:id="@+id/scanText"
-                android:text="@string/value_scan"
-                android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_above="@+id/ScanButton">
-            </TextView>
+            android:layout_height="fill_parent"
+            android:background="#000000">
 
             <Button
-                android:id="@+id/ScanButton"
-                android:text="@string/new_scan"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-        </RelativeLayout>
-    </GridLayout>
-
-</LinearLayout>
+                android:text="New Button"
+                android:id="@+id/button"
+                android:onClick="startScan" />
+        </GridLayout>
+</ScrollView>
