--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,83 @@
 <ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView">
+    android:id="@+id/scrollView"
+    android:background="@drawable/bg_main">
+    <GridLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/mainLayer"
+        android:rowOrderPreserved="true"
+        android:useDefaultMargins="false">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="150dp"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/app_name"
+                android:id="@+id/textView"
+                android:textAlignment="center"
+                style="@style/TextShadowLarge"
+                android:textColor="#ffffff"
+                android:textSize="50dp"
+                android:alpha="0.80" />
+        </LinearLayout>
+
         <GridLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#000000">
+            android:layout_column="0"
+            android:layout_row="2"
+            android:orientation="horizontal"
+            android:useDefaultMargins="true"
+            android:layout_margin="10dp"
+            android:layout_gravity="center_horizontal"
+            android:alignmentMode="alignMargins"
+            android:background="#ffffff"
+            android:alpha="0.9">
+
+            <Button
+            android:layout_width="fill_parent"
+            android:layout_height="140dp"
+            android:text="@string/new_scan"
+            android:id="@+id/btScan"
+            android:onClick="startScan"
+                android:layout_column="0"
+                android:layout_row="1"
+                style="@style/TextShadowMedium"
+                android:background="@drawable/wine"
+                android:alpha="0.80"
+                android:layout_margin="10dp" />
 
             <Button
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="New Button"
-                android:id="@+id/button"
-                android:onClick="startScan" />
+                android:layout_height="140dp"
+                android:text="@string/history"
+                android:id="@+id/btHistory"
+                android:layout_column="0"
+                android:layout_row="2"
+                style="@style/TextShadowMedium"
+                android:background="@drawable/green"
+                android:alpha="0.80"
+                android:layout_margin="10dp" />
         </GridLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_column="0"
+            android:layout_row="3"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"></LinearLayout>
+    </GridLayout>
 </ScrollView>
